@@ -1,3 +1,6 @@
+Upcoming:
+- Improved feature registration
+
 1.19.1-4.0.3:
 - Moved the Parameter class from RFToolsControl to the API
 
